--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -1,14 +1,22 @@
 {
-  "version": "0.0.1-alpha1-build1",
+  "version": "0.0.1-alpha1-build2",
   "description": "A .NET CLI Commands library.",
-  "authors": [ "giggio" ],
+  "authors": [
+    "giggio"
+  ],
   "packOptions": {
     "owners": [
       "giggio"
     ],
     "repository": {
-      "type": "git", "url": "https://github.com/Lambda3/dotnet-commands"
+      "type": "git",
+      "url": "https://github.com/Lambda3/dotnet-commands"
     }
+  },
+  "publishOptions": {
+    "includeFiles": [
+      "dotnet-commands.cmd"
+    ]
   },
   "buildOptions": {
     "debugType": "portable",
@@ -27,7 +35,7 @@
     "docopt.net": "0.6.1.8",
     "System.Collections.NonGeneric": "4.0.1",
     "Newtonsoft.Json": "9.0.1",
-    "System.IO.Compression.ZipFile":"4.0.1"
+    "System.IO.Compression.ZipFile": "4.0.1"
   },
   "frameworks": {
     "netcoreapp1.0": {
