Bootstrap the executable

--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.1-alpha1-build3",
+    "version": "0.0.1-alpha1-build4",
     "description": "A .NET CLI Commands library.",
     "authors": [
         "giggio"
@@ -15,7 +15,11 @@
         "files": {
             "mappings": {
                 "content/commandMetadata.json": "commandMetadata.json",
-                "lib/netcoreapp1.0/dotnet-commands.cmd": "dotnet-commands.cmd"
+                "lib/netcoreapp1.0/dotnet-commands.cmd": "dotnet-commands.cmd",
+                "lib/netcoreapp1.0/project.json": "project.json",
+                "lib/netcoreapp1.0/project.lock.json": "project.lock.json",
+                "lib/netcoreapp1.0/dotnet-commands.deps.json": "bin/**/netcoreapp1.0/dotnet-commands.deps.json",
+                "lib/netcoreapp1.0/dotnet-commands.runtimeconfig.dev.json": "bin/**/netcoreapp1.0/dotnet-commands.runtimeconfig.dev.json"
             }
         }
     },
