--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -1,9 +1,18 @@
 {
     "version": "0.0.1-alpha1-build9",
     "description": "A .NET CLI Commands library.",
-    "authors": [
-        "giggio"
-    ],
+    "dependencies": {
+        "Microsoft.NETCore.App": {
+            "type": "platform",
+            "version": "1.0.0"
+        },
+        "docopt.net": "0.6.1.8",
+        "System.Collections.NonGeneric": "4.0.1",
+        "Newtonsoft.Json": "9.0.1",
+        "System.IO.Compression.ZipFile": "4.0.1",
+        "NuGet.Versioning": "3.5.0-beta2-1484"
+    },
+    "authors": [ "giggio" ],
     "packOptions": {
         "owners": [
             "giggio"
@@ -35,16 +44,6 @@
                 "dotnet-commands.cmd"
             ]
         }
-    },
-    "dependencies": {
-        "Microsoft.NETCore.App": {
-            "type": "platform",
-            "version": "1.0.0"
-        },
-        "docopt.net": "0.6.1.8",
-        "System.Collections.NonGeneric": "4.0.1",
-        "Newtonsoft.Json": "9.0.1",
-        "System.IO.Compression.ZipFile": "4.0.1"
     },
     "frameworks": {
         "netcoreapp1.0": {
