--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -10,7 +10,8 @@
         "System.Collections.NonGeneric": "4.0.1",
         "Newtonsoft.Json": "9.0.1",
         "System.IO.Compression.ZipFile": "4.0.1",
-        "NuGet.Versioning": "3.5.0-beta2-1484"
+        "NuGet.Versioning": "3.5.0-beta2-1484",
+        "NuGet.Configuration": "3.5.0-beta2-1484"
     },
     "authors": [ "giggio" ],
     "packOptions": {
