--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,17 +9,17 @@ clone_depth: 1
 build_script:
   - ps: >-
 
-      cd c:\projects\src\dotnet-commands
+      cd c:\projects\dotnet-commands\src\dotnet-commands
 
       dotnet build
 
-      cd c:\projects\test\IntegrationTests
+      cd c:\projects\dotnet-commands\test\IntegrationTests
 
       dotnet build
 
 test_script:
   - ps: >-
 
-      cd c:\projects\test\IntegrationTests
+      cd c:\projects\dotnet-commands\test\IntegrationTests
 
       dotnet test
