--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ clone_depth: 1
 build_script:
   - ps: >-
 
+      dotnet restore
+
       cd c:\projects\dotnet-commands\src\dotnet-commands
 
       dotnet build
