--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.1-alpha1",
+    "version": "0.1.1",
     "description": "A .NET CLI Commands library.",
     "dependencies": {
         "Microsoft.NETCore.App": {
