--- a/src/dotnet-commands/project.json
+++ b/src/dotnet-commands/project.json
@@ -1,17 +1,17 @@
 {
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "A .NET CLI Commands library.",
     "dependencies": {
         "Microsoft.NETCore.App": {
             "type": "platform",
             "version": "1.0.0"
         },
-        "docopt.net": "0.6.1.8",
+        "docopt.net": "0.6.1.9",
         "System.Collections.NonGeneric": "4.0.1",
         "Newtonsoft.Json": "9.0.1",
         "System.IO.Compression.ZipFile": "4.0.1",
-        "NuGet.Versioning": "3.5.0-beta2-1484",
-        "NuGet.Configuration": "3.5.0-beta2-1484"
+        "NuGet.Versioning": "3.5.0-rc1-final",
+        "NuGet.Configuration": "3.5.0-rc1-final"
     },
     "authors": [ "giggio" ],
     "packOptions": {
