List installed commands and packages
Closes #11

--- a/src/dotnet-commands/Properties/launchSettings.json
+++ b/src/dotnet-commands/Properties/launchSettings.json
@@ -1,8 +1,9 @@
 {
   "profiles": {
     "dotnet-commands": {
-      "commandName": "Project",
-      "commandLineArgs": "install dotnet-foo"
+        "commandName": "Project",
+        "commandLineArgs": "list",
+        "workingDirectory": "C:\\p\\sdk\\components"
     }
   }
 }
