Uninstall even without tools directory
Fixes #10

--- a/src/dotnet-commands/Properties/launchSettings.json
+++ b/src/dotnet-commands/Properties/launchSettings.json
@@ -1,9 +1,8 @@
 {
   "profiles": {
     "dotnet-commands": {
-        "commandName": "Project",
-        "commandLineArgs": "list",
-        "workingDirectory": "C:\\p\\sdk\\components"
+      "commandName": "Project",
+      "commandLineArgs": "list"
     }
   }
 }
