Install commands using correct package casing
Closes #12

--- a/src/dotnet-commands/Properties/launchSettings.json
+++ b/src/dotnet-commands/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "dotnet-commands": {
       "commandName": "Project",
-      "commandLineArgs": "list"
+      "commandLineArgs": "install dotnet-foo"
     }
   }
 }
