Enable install specific version
Closes #3

--- a/src/dotnet-commands/Properties/launchSettings.json
+++ b/src/dotnet-commands/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "dotnet-commands": {
       "commandName": "Project",
-      "commandLineArgs": "install dotnet-foo"
+      "commandLineArgs": "install dotnet-foo@1.0.1"
     }
   }
 }
